fixed text aligning

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,9 +306,9 @@ footer {
     ---------------------------
 */
 #about {
+  text-align: center;
   padding: 50px 15px;
-  border-bottom: 1px solid #dcd9d9;
-  text-align: center; }
+  border-bottom: 1px solid #dcd9d9; }
   #about h2 {
     color: #374054; }
   #about p {
